# ChangeLog for dev-python/natgrid
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/natgrid/ChangeLog,v 1.6 2012/08/02 18:21:56 bicatali Exp $

  02 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> -natgrid-0.1.ebuild,
  natgrid-0.2.1.ebuild:
  Keyword amd64-linux and x86-linux

  23 Feb 2012; Patrick Lauer <patrick@gentoo.org> natgrid-0.1.ebuild,
  natgrid-0.2.1.ebuild:
  Restricting python

*natgrid-0.2.1 (23 Jan 2011)

  23 Jan 2011; Sébastien Fabbro <bicatali@gentoo.org> +natgrid-0.2.1.ebuild:
  Version bump

  23 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  natgrid-0.1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  28 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> natgrid-0.1.ebuild:
  Removed mpl_toolkits/__init__.py which collides with matplotlib, updated
  minimum version dependency for matplotlib

*natgrid-0.1 (27 Oct 2008)

  27 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +natgrid-0.1.ebuild:
  Initial import