@@ -1,12 +1,11 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/natgrid/natgrid-0.2.1.ebuild,v 1.3 2012/08/02 18:21:56 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/natgrid/natgrid-0.2.1-r1.ebuild,v 1.1 2013/07/27 06:47:57 idella4 Exp $
 
-EAPI="3"
-SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.* 2.7-pypy-* *-jython"
+EAPI=5
+PYTHON_COMPAT=( python{2_6,2_7} )
 
-inherit distutils
+inherit distutils-r1
 
 DESCRIPTION="Matplotlib toolkit for gridding irreguraly spaced data"
 HOMEPAGE="http://matplotlib.sourceforge.net/users/toolkits.html"
@@ -17,20 +16,19 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
-DEPEND=">=dev-python/matplotlib-0.98"
+DEPEND=">=dev-python/matplotlib-0.98[${PYTHON_USEDEP}]"
 RDEPEND="${DEPEND}"
 
 PYTHON_MODNAME="mpl_toolkits/natgrid"
 
-src_install() {
-	distutils_src_install
-
+python_install_all() {
 	insinto /usr/share/doc/${PF}
 	doins test.py || die "doins failed"
+	distutils-r1_python_install_all
+}
 
+python_install() {
 	# Fix collision with dev-python/matplotlib.
-	delete_mpl_toolkits.__init__() {
-		rm -f "${ED}$(python_get_sitedir)/mpl_toolkits/__init__.py"
-	}
-	python_execute_function -q delete_mpl_toolkits.__init__
+	rm -f "${D}$(python_get_sitedir)/mpl_toolkits/__init__.py" || die
+	distutils-r1_python_install
 }
