@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/natgrid
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/natgrid/ChangeLog,v 1.6 2012/08/02 18:21:56 bicatali Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/natgrid/ChangeLog,v 1.7 2013/07/27 06:47:57 idella4 Exp $
+
+*natgrid-0.2.1-r1 (27 Jul 2013)
+
+  27 Jul 2013; Ian Delaney <idella4@gentoo.org> +natgrid-0.2.1-r1.ebuild,
+  -natgrid-0.2.1.ebuild:
+  migrate -> distutils-r1, remove old
 
   02 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> -natgrid-0.1.ebuild,
   natgrid-0.2.1.ebuild:
